--- a/HW4/WebApplication2/WebApplication2.csproj
+++ b/HW4/WebApplication2/WebApplication2.csproj
@@ -188,10 +188,12 @@
     <Content Include="Views\Home\Home.cshtml" />
     <Content Include="Views\Home\Page1.cshtml" />
     <Content Include="Views\Home\Page2.cshtml" />
+    <Content Include="Views\Home\Page3.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Page3\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
