--- a/HW5/HW5/HW5.csproj
+++ b/HW5/HW5/HW5.csproj
@@ -150,7 +150,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Models\customer.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\DAL\CustomerContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
