Fixed file tree issues, Submission now works but Create has issues.

--- a/HW5/HW5/HW5.csproj
+++ b/HW5/HW5/HW5.csproj
@@ -151,7 +151,7 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Models\Customer.cs" />
-    <Compile Include="Models\DAL\CustomerContext.cs" />
+    <Compile Include="DAL\CustomerContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -201,13 +201,12 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Home.cshtml" />
-    <Content Include="Views\Home\Submissions.cshtml" />
-    <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Customer\Submissions.cshtml" />
+    <Content Include="Views\Customer\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\CustomerContext\" />
     <Folder Include="Views\Customers\" />
-    <Folder Include="Views\Customer\" />
     <Folder Include="Views\Submission\" />
   </ItemGroup>
   <ItemGroup>
