More attempts made, more attempts failed, seeking help.

--- a/HW8/HW8/HW8.csproj
+++ b/HW8/HW8/HW8.csproj
@@ -212,7 +212,7 @@
     <Content Include="Views\Artists\Edit.cshtml" />
     <Content Include="Views\Artists\Index.cshtml" />
     <Content Include="Views\Artists\Artists.cshtml" />
-    <Content Include="Views\Artists\Artwork.cshtml" />
+    <Content Include="Views\Artists\Artworks.cshtml" />
     <Content Include="Views\Artists\Classifications.cshtml" />
   </ItemGroup>
   <ItemGroup />
